unifi: expose PoE ports as individual switches
Before this change, switches were provided only for devices that were at
least once discovered on a PoE-enabled port, but with the caveat that
only the last port and uplink would be preserved and restored to try
and turning them back on. This also restricted the availability of these
switches to clients, rather than UniFi devices themselves.

With this change, `SwitchEntity` are added per-port for every PoE port
that is found available, whether it has a client connected or not (since
there is no way for a device to know if there's a turned off client
connected to the port.) This allows to then label the switches
separately and re-enable whichever downlink is present, including other
unifi devices (e.g. to automate turning on or off additional access
points.)

Note that unlike the previous PoE switches that were only added if the
configuration requested it, these switches are added unconditionally.

Thanks to the ability to mark these as configuration switches, they are
not exposed in dashboards by default, and unlike the previous client PoE
switches, they are not unbounded: there's only at most as many as there
are ports on the switches themselves (most switches have only half of
their ports PoE-enabled.)

--- a/homeassistant/components/unifi/translations/en.json
+++ b/homeassistant/components/unifi/translations/en.json
@@ -30,8 +30,7 @@
             "client_control": {
                 "data": {
                     "block_client": "Network access controlled clients",
-                    "dpi_restrictions": "Allow control of DPI restriction groups",
-                    "poe_clients": "Allow POE control of clients"
+                    "dpi_restrictions": "Allow control of DPI restriction groups"
                 },
                 "description": "Configure client controls\n\nCreate switches for serial numbers you want to control network access for.",
                 "title": "UniFi Network options 2/3"
