Add Top/Down Bottom/Up support to powerview

--- a/homeassistant/components/hunterdouglas_powerview/translations/en.json
+++ b/homeassistant/components/hunterdouglas_powerview/translations/en.json
@@ -19,5 +19,14 @@
                 "title": "Connect to the PowerView Hub"
             }
         }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "create_seperate_entities": "Create seperate entities for blinds that allow top/down bottom/up functionality"
+                }
+            }
+        }
     }
 }
