--- a/homeassistant/components/tesla_wall_connector/translations/en.json
+++ b/homeassistant/components/tesla_wall_connector/translations/en.json
@@ -7,21 +7,24 @@
             "cannot_connect": "Failed to connect",
             "unknown": "Unexpected error"
         },
+        "flow_title": "{serial_number} ({host})",
         "step": {
             "user": {
                 "data": {
                     "host": "Host"
-                }
+                },
+                "title": "Configure Tesla Wall Connector"
             }
         }
     },
-    "options":{
+    "options": {
         "step": {
             "init": {
                 "data": {
-                    "scan_interval": "Poll Interval while not charging (sec)",
-                    "scan_interval_charging": "Poll Interval while charging (sec)"
-                }
+                    "scan_interval": "Update frequency",
+                    "scan_interval_charging": "Update frequency while charging"
+                },
+                "title": "Configure options for Tesla Wall Connector"
             }
         }
     }
