--- a/homeassistant/components/unifi/translations/sv.json
+++ b/homeassistant/components/unifi/translations/sv.json
@@ -18,7 +18,7 @@
                     "username": "Anv\u00e4ndarnamn",
                     "verify_ssl": "Controller med korrekt certifikat"
                 },
-                "title": "Konfigurera UniFi Controller"
+                "title": "Konfigurera UniFi Network"
             }
         }
     },
