--- a/homeassistant/components/unifi/translations/sl.json
+++ b/homeassistant/components/unifi/translations/sl.json
@@ -18,7 +18,7 @@
                     "username": "Uporabni\u0161ko ime",
                     "verify_ssl": "Kontroler uporablja ustrezen certifikat"
                 },
-                "title": "Nastavi UniFi Controller"
+                "title": "Nastavi UniFi Network"
             }
         }
     },
