--- a/homeassistant/components/tolo/translations/en.json
+++ b/homeassistant/components/tolo/translations/en.json
@@ -1,8 +1,8 @@
 {
     "config": {
         "abort": {
-            "already_configured": "Device is already configured",
-            "no_devices_found": "No devices found on the network"
+            "no_devices_found": "No devices found on the network",
+            "already_configured": "Device is already configured"
         },
         "error": {
             "cannot_connect": "Failed to connect"
