improved select platform implementation

--- a/homeassistant/components/tolo/translations/select.en.json
+++ b/homeassistant/components/tolo/translations/select.en.json
@@ -1,8 +1,8 @@
 {
     "state": {
         "tolo__lamp_mode": {
-            "AUTOMATIC": "Automatic",
-            "MANUAL": "Manual"
+            "automatic": "automatic",
+            "manual": "manual"
         }
     }
 }
