--- a/homeassistant/components/wiffi/translations/en.json
+++ b/homeassistant/components/wiffi/translations/en.json
@@ -1,6 +1,7 @@
 {
     "config": {
         "abort": {
+            "already_configured": "Server port is already configured.",
             "addr_in_use": "Server port already in use.",
             "start_server_failed": "Start server failed."
         },
