Reverts changes to translations

--- a/homeassistant/components/unifi/translations/da.json
+++ b/homeassistant/components/unifi/translations/da.json
@@ -18,7 +18,7 @@
                     "username": "Brugernavn",
                     "verify_ssl": "Controller bruger korrekt certifikat"
                 },
-                "title": "Konfigurer UniFi Network"
+                "title": "Konfigurer UniFi Controller"
             }
         }
     },
