--- a/homeassistant/components/unifi/translations/en.json
+++ b/homeassistant/components/unifi/translations/en.json
@@ -21,7 +21,7 @@
                     "username": "Username",
                     "verify_ssl": "Verify SSL certificate"
                 },
-                "title": "Set up UniFi Network"
+                "title": "Set up UniFi Controller"
             }
         }
     },
