--- a/homeassistant/components/unifi/translations/ru.json
+++ b/homeassistant/components/unifi/translations/ru.json
@@ -21,7 +21,7 @@
                     "username": "\u0418\u043c\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f",
                     "verify_ssl": "\u041f\u0440\u043e\u0432\u0435\u0440\u044f\u0442\u044c \u0441\u0435\u0440\u0442\u0438\u0444\u0438\u043a\u0430\u0442 SSL"
                 },
-                "title": "UniFi Network"
+                "title": "UniFi Controller"
             }
         }
     },
