--- a/homeassistant/components/unifi/translations/tr.json
+++ b/homeassistant/components/unifi/translations/tr.json
@@ -21,7 +21,7 @@
                     "username": "Kullan\u0131c\u0131 Ad\u0131",
                     "verify_ssl": "SSL sertifikas\u0131n\u0131 do\u011frulay\u0131n"
                 },
-                "title": "UniFi Network'\u0131 kurun"
+                "title": "UniFi Controller'\u0131 kurun"
             }
         }
     },
