--- a/homeassistant/components/unifi/translations/id.json
+++ b/homeassistant/components/unifi/translations/id.json
@@ -21,7 +21,7 @@
                     "username": "Nama Pengguna",
                     "verify_ssl": "Verifikasi sertifikat SSL"
                 },
-                "title": "Siapkan UniFi Network"
+                "title": "Siapkan UniFi Controller"
             }
         }
     },
