Remove outdated string from translation

--- a/homeassistant/components/tesla_wall_connector/translations/en.json
+++ b/homeassistant/components/tesla_wall_connector/translations/en.json
@@ -21,8 +21,7 @@
         "step": {
             "init": {
                 "data": {
-                    "scan_interval": "Update frequency",
-                    "scan_interval_charging": "Update frequency while charging"
+                    "scan_interval": "Update frequency"
                 },
                 "title": "Configure options for Tesla Wall Connector"
             }
