--- a/homeassistant/components/ecowitt/translations/en.json
+++ b/homeassistant/components/ecowitt/translations/en.json
@@ -2,8 +2,7 @@
     "config": {
 	"title": "Ecowitt Weather Station",
 	"abort": {
-	    "already_configured": "Device is already configured.",
-	    "unknown": "Unknown error."
+	    "already_configured": "Device is already configured."
 	},
 	"step": {
 	    "user": {
