Fix strings and translations

--- a/homeassistant/components/walkingpad/translations/ru.json
+++ b/homeassistant/components/walkingpad/translations/ru.json
@@ -10,7 +10,7 @@
     },
     "step": {
       "user": {
-        "description": "Выберите тип подключения. Китайские версии WalkingPad обычно подключаются с помощью Bluetooth, европейские - с помощью WiFi.",
+        "description": "Выберите тип подключения. Китайские версии WalkingPad обычно подключаются с помощью WiFi, европейские - с помощью Bluetooth.",
         "data": {
           "conn_type": "Тип подключения."
         }
