Fix strings and translations

--- a/homeassistant/components/walkingpad/translations/ru.json
+++ b/homeassistant/components/walkingpad/translations/ru.json
@@ -28,5 +28,14 @@
         }
       }
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "data": {
+          "default_speed": "Скорость по умолчанию"
+        }
+      }
+    }
   }
 }
