--- a/homeassistant/components/yale_smart_alarm/translations/en.json
+++ b/homeassistant/components/yale_smart_alarm/translations/en.json
@@ -1,8 +1,7 @@
 {
     "config": {
       "abort": {
-        "already_configured": "Account is already configured",
-        "reauth_successful": "Re-authentication was successful"
+        "already_configured": "Account is already configured"
       },
       "error": {
         "invalid_auth": "Invalid authentication",
