--- a/homeassistant/components/ecowitt/translations/en.json
+++ b/homeassistant/components/ecowitt/translations/en.json
@@ -1,33 +1,37 @@
 {
-    "config": {
-	"title": "Ecowitt Weather Station",
-	"abort": {
-	    "already_configured": "Device is already configured."
-	},
-	"step": {
-	    "user": {
-		"description": "The following steps must be performed before setting up this integration.\nIf you have not already done so, please do this now.\n\nUse the WS View app (on your phone) for your Ecowitt device, and connect to it.\nPick menu -> device list -> Pick your station.\nHit next repeatedly to move to the last screen titled 'Customized'\n\nPick the protocol Ecowitt, and put in the ip/hostname of your hass server.\nPath doesn't matter as long as it ends in /, leave the default, or change it to just /.\nPick a port that is not in use on the server (netstat -lt). (4199 is probably a good default)\nPick a reasonable value for updates, like 60 seconds.\nSave configuration.  The Ecowitt should then start attempting to send data to your server.\n\nClick submit when these instructions have been completed.",
-		"title": "Instructions for setting up the Ecowitt."
-	    },
-	    "initial_options": {
-		"title": "Ecowitt Parameters",
-		"data": {
-		    "port": "Listening port"
-		}
-	    }
-	}
+  "config": {
+    "title": "Ecowitt Weather Station",
+    "error": {
+      "cannot_connect": "Failed to connect",
+      "unknown": "Unexpected error"
     },
-    "options": {
-	"step": {
-	    "init": {
-		"data": {
-		    "barounit": "Barometer Unit",
-		    "windunit": "Wind Unit",
-		    "rainunit": "Rainfall Unit",
-		    "lightningunit": "Lightning distance unit",
-		    "windchillunit": "Windchill calculation"
-		}
-	    }
+    "abort": {
+      "already_configured": "Device is already configured."
+    },
+    "step": {
+      "user": {
+	"description": "The following steps must be performed before setting up this integration.\nIf you have not already done so, please do this now.\n\nUse the WS View app (on your phone) for your Ecowitt device, and connect to it.\nPick menu -> device list -> Pick your station.\nHit next repeatedly to move to the last screen titled 'Customized'\n\nPick the protocol Ecowitt, and put in the ip/hostname of your hass server.\nPath doesn't matter as long as it ends in /, leave the default, or change it to just /.\nPick a port that is not in use on the server (netstat -lt). (4199 is probably a good default)\nPick a reasonable value for updates, no more than 60 seconds.\nSave configuration.  The Ecowitt should then start attempting to send data to your server.\n\nClick submit when these instructions have been completed.",
+	"title": "Instructions for setting up the Ecowitt."
+      },
+      "initial_options": {
+	"title": "Ecowitt Parameters",
+	"data": {
+	  "port": "Listening port"
 	}
+      }
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+	"data": {
+	  "barounit": "Barometer Unit",
+	  "windunit": "Wind Unit",
+	  "rainunit": "Rainfall Unit",
+	  "lightningunit": "Lightning distance unit",
+	  "windchillunit": "Windchill calculation"
+	}
+      }
+    }
+  }
 }
