--- a/homeassistant/components/fronius/translations/en.json
+++ b/homeassistant/components/fronius/translations/en.json
@@ -8,9 +8,10 @@
             "cannot_connect": "Failed to connect",
             "unknown": "Unexpected error"
         },
+        "flow_title": "{device}",
         "step": {
             "confirm_discovery": {
-                "description": "Do you want to setup {device}?"
+                "description": "Do you want to add {device} to Home Assistant?"
             },
             "user": {
                 "data": {
