--- a/homeassistant/components/yamaha_musiccast/translations/select.en.json
+++ b/homeassistant/components/yamaha_musiccast/translations/select.en.json
@@ -1,52 +1,52 @@
 {
     "state": {
-        "DIMMER": {
+        "yamaha_musiccast__DIMMER": {
             "auto": "Auto"
         },
-        "zone_SLEEP": {
-            "off": "Off",
-            "30 min": "30 Minutes",
-            "60 min": "60 Minutes",
-            "90 min": "90 Minutes",
-            "120 min": "120 Minutes"
-        },
-        "zone_TONE_CONTROL_mode": {
-            "manual": "Manual",
+        "yamaha_musiccast__zone_EQUALIZER_mode": {
             "auto": "Auto",
-            "bypass": "Bypass"
+            "bypass": "Bypass",
+            "manual": "Manual"
         },
-        "zone_SURR_DECODER_TYPE": {
-            "toggle": "Toggle",
-            "auto": "Auto",
-            "dolby_pl": "Dolby ProLogic",
-            "dolby_pl2x_movie": "Dolby ProLogic 2x Movie",
-            "dolby_pl2x_music": "Dolby ProLogic 2x Music",
-            "dolby_pl2x_game": "Dolby ProLogic 2x Game",
-            "dolby_surround": "Dolby Surround",
-            "dts_neural_x": "DTS Neural:X",
-            "dts_neo6_cinema": "DTS Neo:6 Cinema",
-            "dts_neo6_music": "DTS Neo:6 Music"
+        "yamaha_musiccast__zone_LINK_AUDIO_DELAY": {
+            "audio_sync": "Audio Synchronization",
+            "audio_sync_off": "Audio Synchronization Off",
+            "audio_sync_on": "Audio Synchronization On",
+            "balanced": "Balanced",
+            "lip_sync": "Lip Synchronization"
         },
-        "zone_EQUALIZER_mode": {
-            "manual": "Manual",
-            "auto": "Auto",
-            "bypass": "Bypass"
-        },
-        "zone_LINK_AUDIO_QUALITY": {
+        "yamaha_musiccast__zone_LINK_AUDIO_QUALITY": {
             "compressed": "Compressed",
             "uncompressed": "Uncompressed"
         },
-        "zone_LINK_CONTROL": {
-            "standard": "Standard",
+        "yamaha_musiccast__zone_LINK_CONTROL": {
             "speed": "Speed",
-            "stability": "Stability"
+            "stability": "Stability",
+            "standard": "Standard"
         },
-        "zone_LINK_AUDIO_DELAY": {
-            "audio_sync_on": "Audio Synchronization On",
-            "audio_sync_off": "Audio Synchronization Off",
-            "balanced": "Balanced",
-            "lip_sync": "Lip Synchronization",
-            "audio_sync": "Audio Synchronization"
+        "yamaha_musiccast__zone_SLEEP": {
+            "120 min": "120 Minutes",
+            "30 min": "30 Minutes",
+            "60 min": "60 Minutes",
+            "90 min": "90 Minutes",
+            "off": "Off"
+        },
+        "yamaha_musiccast__zone_SURR_DECODER_TYPE": {
+            "auto": "Auto",
+            "dolby_pl": "Dolby ProLogic",
+            "dolby_pl2x_game": "Dolby ProLogic 2x Game",
+            "dolby_pl2x_movie": "Dolby ProLogic 2x Movie",
+            "dolby_pl2x_music": "Dolby ProLogic 2x Music",
+            "dolby_surround": "Dolby Surround",
+            "dts_neo6_cinema": "DTS Neo:6 Cinema",
+            "dts_neo6_music": "DTS Neo:6 Music",
+            "dts_neural_x": "DTS Neural:X",
+            "toggle": "Toggle"
+        },
+        "yamaha_musiccast__zone_TONE_CONTROL_mode": {
+            "auto": "Auto",
+            "bypass": "Bypass",
+            "manual": "Manual"
         }
     }
 }
