--- a/homeassistant/components/tuya/translations/select.en.json
+++ b/homeassistant/components/tuya/translations/select.en.json
@@ -64,7 +64,7 @@
             "standby": "Standby",
             "random": "Random",
             "smart": "Smart",
-            "wall_follow": "Wall Follow",
+            "wall_follow": "Follow Wall",
             "mop": "Mop",
             "spiral": "Spiral",
             "left_spiral": "Left Spiral",
