--- a/homeassistant/components/tuya/translations/select.en.json
+++ b/homeassistant/components/tuya/translations/select.en.json
@@ -67,8 +67,8 @@
             "wall_follow": "Follow Wall",
             "mop": "Mop",
             "spiral": "Spiral",
-            "left_spiral": "Left Spiral",
-            "right_spiral": "Right Spiral",
+            "left_spiral": "Spiral Left",
+            "right_spiral": "Spiral Right",
             "bow": "Bow",
             "left_bow": "Lef Bow",
             "right_bow": "Right Bow",
