--- a/homeassistant/components/tuya/translations/select.en.json
+++ b/homeassistant/components/tuya/translations/select.en.json
@@ -70,8 +70,8 @@
             "left_spiral": "Spiral Left",
             "right_spiral": "Spiral Right",
             "bow": "Bow",
-            "left_bow": "Lef Bow",
-            "right_bow": "Right Bow",
+            "left_bow": "Bow Lef",
+            "right_bow": "Bow Right",
             "partial_bow": "Partial Bow",
             "chargego": "Charge Go",
             "single": "Single",
