--- a/homeassistant/components/tuya/translations/select.en.json
+++ b/homeassistant/components/tuya/translations/select.en.json
@@ -72,7 +72,7 @@
             "bow": "Bow",
             "left_bow": "Bow Lef",
             "right_bow": "Bow Right",
-            "partial_bow": "Partial Bow",
+            "partial_bow": "Bow Partially",
             "chargego": "Charge Go",
             "single": "Single",
             "zone": "Zone",
