--- a/homeassistant/components/tuya/translations/select.en.json
+++ b/homeassistant/components/tuya/translations/select.en.json
@@ -73,7 +73,7 @@
             "left_bow": "Bow Lef",
             "right_bow": "Bow Right",
             "partial_bow": "Bow Partially",
-            "chargego": "Charge Go",
+            "chargego": "Return to dock",
             "single": "Single",
             "zone": "Zone",
             "pose": "Pose",
