Add update interval config to Ondilo ICO (#60825)

--- a/homeassistant/components/ondilo_ico/translations/en.json
+++ b/homeassistant/components/ondilo_ico/translations/en.json
@@ -12,5 +12,14 @@
                 "title": "Pick Authentication Method"
             }
         }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "scan_interval": "Update interval in minutes, minimum 2"
+                }
+            }
+        }
     }
 }
