--- a/homeassistant/components/nina/translations/en.json
+++ b/homeassistant/components/nina/translations/en.json
@@ -11,13 +11,13 @@
         "step": {
             "user": {
                 "data": {
+                    "_a_to_d": "City/county (A-D)",
+                    "_e_to_h": "City/county (E-H)",
+                    "_i_to_l": "City/county (I-L)",
+                    "_m_to_q": "City/county (M-Q)",
+                    "_r_to_u": "City/county (R-U)",
+                    "_v_to_ue": "City/county (V-UE)",
                     "corona_filter": "Remove Corona Warnings",
-                    "regions1": "city/county (A-D)",
-                    "regions2": "city/county (E-H)",
-                    "regions3": "city/county (I-L)",
-                    "regions4": "city/county (M-Q)",
-                    "regions5": "city/county (R-U)",
-                    "regions6": "city/county (V-Z)",
                     "slots": "Maximum warnings per city/county"
                 },
                 "title": "Select city/county"
