--- a/homeassistant/components/nina/translations/en.json
+++ b/homeassistant/components/nina/translations/en.json
@@ -16,7 +16,7 @@
                     "_i_to_l": "City/county (I-L)",
                     "_m_to_q": "City/county (M-Q)",
                     "_r_to_u": "City/county (R-U)",
-                    "_v_to_ue": "City/county (V-UE)",
+                    "_v_to_z": "City/county (V-Z)",
                     "corona_filter": "Remove Corona Warnings",
                     "slots": "Maximum warnings per city/county"
                 },
