--- a/homeassistant/components/zwave_me/translations/en.json
+++ b/homeassistant/components/zwave_me/translations/en.json
@@ -3,9 +3,9 @@
         "step": {
             "user": {
                 "title": "ZWaveMe Creation",
-                "description": "Input you WebSocket URL and Token here: TODO Where get token",
+                "description": "Input IP address of Z-Way server and Z-Way access token. IP address can be prefixed with wss:// if HTTPS should be used instead of HTTP. To get the token go to the Z-Way user interface > Menu > Settings > User > API token. It is suggested to create a new user for Home Assistant and grant access to devices you need to control from Home Assistant. It is also possible to use remote access via find.z-wave.me to connect a remote Z-Way. Input wss://find.z-wave.me in IP field and copy the token with Global scope (log-in to Z-Way via find.z-wave.me for this).",
                 "data": {
-                    "url": "URL",
+                    "url": "IP",
                     "token": "Token"
                 }
             }
