--- a/homeassistant/components/sql/translations/en.json
+++ b/homeassistant/components/sql/translations/en.json
@@ -4,16 +4,16 @@
             "already_configured": "Account is already configured"
         },
         "error": {
-            "db_url_invalid": "Database url invalid",
-            "query_invalid": "Query invalid. Needs to start with Select",
-            "value_template_invalid": "Value template invalid"
+            "db_url_invalid": "Database URL invalid",
+            "query_invalid": "SQL Query invalid",
+            "value_template_invalid": "Value Template invalid"
         },
         "step": {
             "user": {
                 "data": {
                     "column": "Column",
                     "db_url": "Database URL",
-                    "query": "Select query",
+                    "query": "Select Query",
                     "unit_of_measurement": "Unit of Measure",
                     "value_template": "Value Template"
                 }
@@ -22,16 +22,16 @@
     },
     "options": {
         "error": {
-            "db_url_invalid": "Database url invalid",
-            "query_invalid": "Query invalid. Needs to start with Select",
-            "value_template_invalid": "Value template invalid"
+            "db_url_invalid": "Database URL invalid",
+            "query_invalid": "SQL Query invalid",
+            "value_template_invalid": "Value Template invalid"
         },
         "step": {
             "init": {
                 "data": {
                     "column": "Column",
                     "db_url": "Database URL",
-                    "query": "Select query",
+                    "query": "Select Query",
                     "unit_of_measurement": "Unit of Measure",
                     "value_template": "Value Template"
                 }
