--- a/homeassistant/components/aten_pe/translations/de.json
+++ b/homeassistant/components/aten_pe/translations/de.json
@@ -4,8 +4,7 @@
             "already_configured": "Ger\u00e4t ist bereits konfiguriert"
         },
         "error": {
-            "cannot_connect": "Verbindung fehlgeschlagen, versuchen Sie es erneut",
-            "unknown": "Unerwarteter Fehler"
+            "cannot_connect": "Verbindung fehlgeschlagen, versuchen Sie es erneut"
         },
         "step": {
             "user": {
