Fix broken translations

--- a/homeassistant/components/vicare/translations/ca.json
+++ b/homeassistant/components/vicare/translations/ca.json
@@ -19,7 +19,7 @@
                     "username": "Correu electr\u00f2nic"
                 },
                 "description": "Configura la integraci\u00f3 ViCare. Per generar la clau API, v\u00e9s a https://developer.viessmann.com",
-                "title": "{name}"
+                "title": "Setup a new Viessmann device"
             }
         }
     }
