--- a/homeassistant/components/vicare/translations/zh-Hant.json
+++ b/homeassistant/components/vicare/translations/zh-Hant.json
@@ -19,7 +19,7 @@
                     "username": "\u96fb\u5b50\u90f5\u4ef6"
                 },
                 "description": "\u6b32\u8a2d\u5b9a ViCare \u6574\u5408\u3002\u8acb\u81f3 https://developer.viessmann.com \u7522\u751f API \u91d1\u9470",
-                "title": "{name}"
+                "title": "Setup a new Viessmann device"
             }
         }
     }
