--- a/homeassistant/components/vicare/translations/bg.json
+++ b/homeassistant/components/vicare/translations/bg.json
@@ -17,7 +17,7 @@
                     "scan_interval": "\u0418\u043d\u0442\u0435\u0440\u0432\u0430\u043b \u043d\u0430 \u0441\u043a\u0430\u043d\u0438\u0440\u0430\u043d\u0435 (\u0441\u0435\u043a\u0443\u043d\u0434\u0438)",
                     "username": "Email"
                 },
-                "title": "{name}"
+                "title": "Setup a new Viessmann device"
             }
         }
     }
