--- a/homeassistant/components/vicare/translations/et.json
+++ b/homeassistant/components/vicare/translations/et.json
@@ -19,7 +19,7 @@
                     "username": "E-posti aadress"
                 },
                 "description": "Seadista ViCare sidumine. API-v\u00f5tme loomiseks mine aadressile https://developer.viessmann.com",
-                "title": "{name}"
+                "title": "Setup a new Viessmann device"
             }
         }
     }
