--- a/homeassistant/components/vicare/translations/fr.json
+++ b/homeassistant/components/vicare/translations/fr.json
@@ -19,7 +19,7 @@
                     "username": "Courriel"
                 },
                 "description": "Configurer l'int\u00e9gration ViCare. Pour g\u00e9n\u00e9rer une cl\u00e9 API se rendre sur https://developer.viessmann.com",
-                "title": "{name}"
+                "title": "Setup a new Viessmann device"
             }
         }
     }
