--- a/homeassistant/components/vicare/translations/he.json
+++ b/homeassistant/components/vicare/translations/he.json
@@ -16,7 +16,7 @@
                     "password": "\u05e1\u05d9\u05e1\u05de\u05d4",
                     "username": "\u05d3\u05d5\u05d0\"\u05dc"
                 },
-                "title": "{name}"
+                "title": "Setup a new Viessmann device"
             }
         }
     }
