--- a/homeassistant/components/vicare/translations/id.json
+++ b/homeassistant/components/vicare/translations/id.json
@@ -19,7 +19,7 @@
                     "username": "Email"
                 },
                 "description": "Siapkan integrasi ViCare. Untuk menghasilkan kunci API, buka https://developer.viessmann.com",
-                "title": "{name}"
+                "title": "Setup a new Viessmann device"
             }
         }
     }
