--- a/homeassistant/components/vicare/translations/it.json
+++ b/homeassistant/components/vicare/translations/it.json
@@ -19,7 +19,7 @@
                     "username": "Email"
                 },
                 "description": "Configura l'integrazione ViCare. Per generare la chiave API vai su https://developer.viessmann.com",
-                "title": "{name}"
+                "title": "Setup a new Viessmann device"
             }
         }
     }
