--- a/homeassistant/components/asuswrt/translations/en.json
+++ b/homeassistant/components/asuswrt/translations/en.json
@@ -18,7 +18,7 @@
                     "mode": "Mode",
                     "name": "Name",
                     "password": "Password",
-                    "port": "Port (leave 0 for protocol default)",
+                    "port": "Port (leave empty for protocol default)",
                     "protocol": "Communication protocol to use",
                     "ssh_key": "Path to your SSH key file (instead of password)",
                     "username": "Username"
