Make tomorrow.io API limit configurable

--- a/homeassistant/components/tomorrowio/translations/en.json
+++ b/homeassistant/components/tomorrowio/translations/en.json
@@ -10,8 +10,7 @@
             "user": {
                 "data": {
                     "api_key": "API Key",
-                    "latitude": "Latitude",
-                    "longitude": "Longitude",
+                    "location": "Location",
                     "name": "Name"
                 },
                 "description": "To get an API key, sign up at [Tomorrow.io](https://app.tomorrow.io/signup)."
@@ -22,9 +21,10 @@
         "step": {
             "init": {
                 "data": {
-                    "timestep": "Min. Between NowCast Forecasts"
+                    "max_requests_per_day": "Maximum API Requests per Day",
+                    "timestep": "Minutes Between NowCast Forecasts"
                 },
-                "description": "If you choose to enable the `nowcast` forecast entity, you can configure the number of minutes between each forecast. The number of forecasts provided depends on the number of minutes chosen between forecasts.",
+                "description": "If your API key allows for a different number of requests per day from the default, you can set the limit here. Note that all `tomorrowio` config entries using this API key will be updated so that your limit is not exceeded.\n\nIf you choose to enable the `nowcast` forecast entity, you can configure the number of minutes between each forecast. The number of forecasts provided depends on the number of minutes chosen between forecasts.",
                 "title": "Update Tomorrow.io Options"
             }
         }
