--- a/homeassistant/components/sql/translations/en.json
+++ b/homeassistant/components/sql/translations/en.json
@@ -16,6 +16,13 @@
                     "query": "Select Query",
                     "unit_of_measurement": "Unit of Measure",
                     "value_template": "Value Template"
+                },
+                "data_description": {
+                    "db_url": "Database URL, leave empty to use default HA database",
+                    "query": "Query to run, needs to start with 'SELECT'",
+                    "column": "Column for returned query to present as state",
+                    "unit_of_measurement": "Unit of Measure (optional)",
+                    "value_template": "Value Template (optional)"
                 }
             }
         }
@@ -34,6 +41,13 @@
                     "query": "Select Query",
                     "unit_of_measurement": "Unit of Measure",
                     "value_template": "Value Template"
+                },
+                "data_description": {
+                    "db_url": "Database URL, leave empty to use default HA database",
+                    "query": "Query to run, needs to start with 'SELECT'",
+                    "column": "Column for returned query to present as state",
+                    "unit_of_measurement": "Unit of Measure (optional)",
+                    "value_template": "Value Template (optional)"
                 }
             }
         }
