--- a/homeassistant/components/qnap_qsw/translations/en.json
+++ b/homeassistant/components/qnap_qsw/translations/en.json
@@ -1,7 +1,8 @@
 {
     "config": {
         "abort": {
-            "already_configured": "Device is already configured"
+            "already_configured": "Device is already configured",
+            "invalid_id": "Device returned an invalid unique ID"
         },
         "error": {
             "cannot_connect": "Failed to connect",
