--- a/homeassistant/components/sabnzbd/translations/en.json
+++ b/homeassistant/components/sabnzbd/translations/en.json
@@ -1,8 +1,5 @@
 {
     "config": {
-        "abort": {
-            "single_instance_allowed": "Already configured. Only a single configuration possible."
-        },
         "error": {
             "cannot_connect": "Failed to connect",
             "invalid_api_key": "Invalid API key"
@@ -11,11 +8,9 @@
             "user": {
                 "data": {
                     "api_key": "API Key",
-                    "host": "Host",
                     "name": "Name",
-                    "path": "Path",
-                    "port": "Port",
-                    "ssl": "Uses an SSL certificate"
+                    "url": "URL",
+                    "path": "Path"
                 },
                 "description": "If you need help with the configuration have a look here: https://www.home-assistant.io/integrations/sabnzbd/",
                 "title": "Sabnzbd"
