Abort flow instead of showing the flow form when encountering multiple entries

--- a/homeassistant/components/dsmr_reader/translations/en.json
+++ b/homeassistant/components/dsmr_reader/translations/en.json
@@ -1,7 +1,9 @@
 {
     "config": {
         "error": {
-            "mqtt_missing": "The MQTT service is required for this integration.",
+            "mqtt_missing": "The MQTT service is required for this integration."
+        },
+        "abort": {
             "single_instance_allowed": "Already configured. Only a single configuration possible."
         },
         "step": {
