--- a/homeassistant/components/dsmr_reader/translations/en.json
+++ b/homeassistant/components/dsmr_reader/translations/en.json
@@ -7,7 +7,7 @@
             "single_instance_allowed": "Already configured. Only a single configuration possible."
         },
         "step": {
-            "user": {
+            "confirm": {
                 "description": "This integration relies on the MQTT connection in DSMR Reader and uses the 'split topic' data sources to create sensors."
             }
         }
