--- a/homeassistant/components/openuv/translations/en.json
+++ b/homeassistant/components/openuv/translations/en.json
@@ -23,7 +23,7 @@
             "fix_flow": {
                 "step": {
                     "confirm": {
-                        "description": "Update any automations or scripts that use this service to instead use the `{alternate_service}` service with a target entity ID of `{alternate_target}`. Then, click SUBMIT below to mark this issue as resolved.",
+                        "description": "Update any automations or scripts that use this service to instead use the `{alternate_service}` service with a target entity ID of `{alternate_target}`.",
                         "title": "The {deprecated_service} service is being removed"
                     }
                 }
