Remove now-unnecessary link to documentation in prompt
The question mark icon in the prompt can now be used to easily access the documentation.

Co-authored-by: J. Nick Koston <nick@koston.org>

--- a/homeassistant/components/dsmr_reader/translations/en.json
+++ b/homeassistant/components/dsmr_reader/translations/en.json
@@ -5,7 +5,7 @@
         },
         "step": {
             "confirm": {
-                "description": "Make sure to configure the 'split topic' data sources in DSMR Reader, as described [in the documentation]({documentation_link})."
+                "description": "Make sure to configure the 'split topic' data sources in DSMR Reader."
             }
         }
     }
