Verify MQTT with domain instead of service availability

--- a/homeassistant/components/dsmr_reader/translations/en.json
+++ b/homeassistant/components/dsmr_reader/translations/en.json
@@ -1,7 +1,7 @@
 {
     "config": {
         "abort": {
-            "no_devices_found": "Required integration MQTT is missing",
+            "no_devices_found": "Required integration MQTT is not configured.",
             "single_instance_allowed": "Already configured. Only a single configuration possible."
         },
         "step": {
