--- a/homeassistant/components/twilio/translations/en.json
+++ b/homeassistant/components/twilio/translations/en.json
@@ -1,6 +1,7 @@
 {
     "config": {
         "abort": {
+            "already_configured": "Device is already configured",
             "cloud_not_connected": "Not connected to Home Assistant Cloud.",
             "single_instance_allowed": "Already configured. Only a single configuration possible.",
             "webhook_not_internet_accessible": "Your Home Assistant instance needs to be accessible from the internet to receive webhook messages."
@@ -10,8 +11,18 @@
         },
         "step": {
             "user": {
-                "description": "Do you want to start set up?",
-                "title": "Set up the Twilio Webhook"
+                "data": {
+                    "account_sid": "Your Twilio account",
+                    "auth_token": "Your Twilio AUTH TOKEN",
+                    "use_webhook": "Use webhook"
+                }
+            }
+        }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "description": "To send events to Home Assistant, you will need to setup [Webhooks with Twilio]({twilio_url}).\n\nFill in the following info:\n\n- URL: `{webhook_url}`\n- Method: POST\n- Content Type: application/x-www-form-urlencoded\n\nSee [the documentation]({docs_url}) on how to configure automations to handle incoming data."
             }
         }
     }
